<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/Heading"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="cursive"
        android:includeFontPadding="true"
        android:text="@string/search"
        android:textColor="#D6382C"
        android:textColorHighlight="#00BCD4"
        android:textSize="30sp"
        android:textStyle="bold"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/AirlineNameSearch"
        android:layout_width="205dp"
        android:layout_height="40dp"
        android:autofillHints="@string/airlinename"
        android:ems="10"
        android:hint="@string/airlinename"
        android:inputType="textShortMessage"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading"
        app:layout_constraintVertical_bias="0.04000002" />

    <EditText
        android:id="@+id/SourceSearch"
        android:layout_width="205dp"
        android:layout_height="40dp"
        android:autofillHints="@string/sourcename"
        android:ems="10"
        android:hint="@string/sourcename"
        android:inputType="textShortMessage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AirlineNameSearch"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/DestinationSearch"
        android:layout_width="205dp"
        android:layout_height="40dp"
        android:autofillHints="@string/destname"
        android:ems="10"
        android:hint="@string/destname"
        android:inputType="textShortMessage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SourceSearch"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/SearchFlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="296dp"
        android:fontFamily="sans-serif"
        android:includeFontPadding="true"
        android:text="@string/SearchInfo"
        android:textColor="#5003D8"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/prettyprintresults"
        android:layout_width="206dp"
        android:layout_height="57dp"
        android:layout_gravity="center"
        android:layout_marginTop="372dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:includeFontPadding="true"
        android:text="@string/display_all_flight_details"
        android:textColor="#5003D8"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>